# cc-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/screenshots/: README.md
scripts/: hook.py
src/cc_usagemonitor/: __init__.py  __main__.py  aggregator.py  anthropic_usage.py  claude_detection.py  config.py  confirm_screen.py  export.py  formatting.py  help_screen.py  hook.py  install_hook.py  launchers.py  loading_screen.py  logger.py  parser.py  paths.py  pricing.json  pricing.py  project_detail.py  project_slug.py  session_detail.py  settings_screen.py  sort_key.py  sort_picker.py  state.py  tailer.py  tui.py  version_check.py
tests/: test_aggregator.py  test_claude_detection.py  test_formatting.py  test_parser.py  test_session_detail_helpers.py  test_sort_key.py  test_state.py  test_version_check.py
