[project]
name = "cc-usagemonitor"
version = "0.1.0"
description = "Real-time token usage monitor for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86",
]

[project.scripts]
cc-usagemonitor = "cc_usagemonitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_usagemonitor"]
