[project]
name = "cc-usagemonitor"
version = "0.1.0"
description = "Real-time token usage monitor for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86",
    "keyring>=24.0",
    "plotext>=5.0",
    "textual-plotext>=1.0",
]

[project.scripts]
cc-usagemonitor = "cc_usagemonitor.__main__:main"
cc-usagemonitor-hook = "cc_usagemonitor.hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_usagemonitor"]
