[project]
name = "cc-monitor"
version = "0.1.12"
description = "Real-time token usage and cost monitor for Claude Code sessions, in your terminal."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Adam Czarnowski", email = "adam.czarnowski@wizipisi.ai" },
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "tui",
    "monitor",
    "usage",
    "cost",
    "tokens",
    "textual",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.86",
    "keyring>=24.0",
    "plotext>=5.0",
    "textual-plotext>=1.0",
]

[project.urls]
Homepage = "https://github.com/boldsamurai/cc-monitor"
Repository = "https://github.com/boldsamurai/cc-monitor"
Issues = "https://github.com/boldsamurai/cc-monitor/issues"

[project.scripts]
cc-monitor = "cc_usagemonitor.__main__:main"
cc-monitor-hook = "cc_usagemonitor.hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_usagemonitor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/cc_usagemonitor",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
